<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".ui.fragments.note.NoteDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_arrow" />

        <TextView
            android:id="@+id/tv_month_in_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/month"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_time_in_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/tv_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/done"
            android:textColor="@color/orange"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:hint="@string/write_something"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_white"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/write_something"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_white" />

</LinearLayout>