<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    app:strokeWidth="0dp"
    app:cardBackgroundColor="#00FFFFFF"
    android:layout_marginVertical="5dp"
    android:layout_marginHorizontal="10dp"
    android:layout_width="match_parent">

    <FrameLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/container"
        android:background="@drawable/rounder_item"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title1"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvTitleNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/gray"
                android:textSize="10sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:text="@string/_16_n_18_13"
            android:textColor="@color/gray"
            android:textSize="8sp" />
    </FrameLayout>
</com.google.android.material.card.MaterialCardView>